<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_transactions"
        android:icon="@drawable/ic_transactions"
        android:title="@string/nav_transactions" />

    <item
        android:id="@+id/nav_summary"
        android:icon="@drawable/ic_summary"
        android:title="@string/nav_summary" />

    <item
        android:id="@+id/nav_currency"
        android:icon="@drawable/ic_currency"
        android:title="@string/nav_currency" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

</menu>
